Fix: Can't test if it is actually fixed, but bug on mobile Safari menu causing top and bottom to go opaque. Take 4

--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -165,12 +165,15 @@
   opacity: 1;
   pointer-events: auto;
   display: flex;
+  background: color-mix(in srgb, var(--background), transparent 20%);
 }
 
 .mobileMenuHidden {
   opacity: 0;
   pointer-events: none;
   display: none;
+  background: transparent;
+
 }
 
 .mobileNav {
